--- a/styles/style.css
+++ b/styles/style.css
@@ -15,22 +15,29 @@
 }
 
 
-.ioBox{
-    position:relative;
-    overflow-wrap:normal;
-    width:200px;
-    height:100px;
-    background-color: rgb(11, 12, 13);
+.introContainer {
+    position: relative;
+    text-align: left;
+    color: white;
+  }
+
+  .textOverlay{
+    position: absolute;
+    top: 250px;
+    left: 16px;
+  }
+  
+
+.textabs{
+    padding-left:0px;
+    padding-right:0px;
+    border-radius: 12.5px;
+    max-width:75%;
+    background-color:rgb(190, 197, 200);
+    color:rgb(3, 45, 62);
     font-size: small;
    
 }
-
-.outText{
-    font-family:'Courier New', Courier, monospace;
-    color:rgb(247, 251, 24)
-}
-
-
 
 .font-color-w{
     color: rgb(241, 246, 255);
@@ -41,13 +48,5 @@
     
 }
 
-.bg-content{
-    background-color:  rgb(35, 35, 59);
-}
-
-.list-group-item:hoverd{
-    background-color: rgb(24, 24, 45);
-    color: rgb(241, 246, 255);
-}
 
 
