conmverted side bar to collapsible menu + upgrade to bs 5.0 + modified footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,15 @@
     }
 }
 
+@media (max-width: 768px){
+    .collapse-center{  
+        justify-content: center !important;
+    }
+    .collapse-start{
+        justify-content: start !important;
+    }
+}
+
 
 .introContainer {
     position: relative;
