--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,11 @@
-*
-{
-    margin: 0;
-    padding:0;
-}
 
-@media (min-width: 768px){
+@media (min-width: 990px){
     .contentBox{
         display:grid;   
-        max-height: 93lvh; 
-        max-width: 100lvh;
+        max-height: 100lvh; 
+        max-width: 100%;
         overflow-x: scroll;
-        padding:15px;
+        
     }
 }
 
@@ -26,16 +21,15 @@
     }
 }
 
-.header{
-    position: fixed;
-    opacity: 0.2;
-    font-size: 35px;
-    font-weight: bold;
+.around{
+    justify-content: space-around !important;
 }
 
-.header :hover{
-    opacity: .9;
-    color:rgb(253, 252, 244);
+.text-indent{
+    text-indent: 40px;
+}
+.pa-l{
+    padding-left: 10px !important;
 }
 
 .introContainer {
@@ -56,8 +50,8 @@
     padding-right:0px;
     border-radius: 12.5px;
     max-width:75%;
-    background-color:rgb(190, 197, 200);
-    color:rgb(3, 45, 62);
+    background-color:rgb(3, 45, 62);
+    color:rgb(190, 197, 200);
     font-size: small;
    
 }
