--- a/styles/style.css
+++ b/styles/style.css
@@ -21,17 +21,6 @@
     }
 }
 
-.around{
-    justify-content: space-around !important;
-}
-
-.text-indent{
-    text-indent: 40px;
-}
-.pa-l{
-    padding-left: 10px !important;
-}
-
 .introContainer {
     position: relative;
     text-align: left;
@@ -52,7 +41,7 @@
     max-width:75%;
     background-color:rgb(3, 45, 62);
     color:rgb(190, 197, 200);
-    font-size: small;
+    font-size: medium;
    
 }
 
@@ -76,8 +65,6 @@
 .bg2{
     background-color: #f5f5f5;
 }
-
-
 
 .counter{
     color: rgb(190, 197, 200);
