--- a/styles/style.css
+++ b/styles/style.css
@@ -86,8 +86,14 @@
 }
 
 .bootbox-confirm div div {
-    background-color: rgb(3, 45, 62);
-    color:rgb(241, 246, 255);
+    background-color: #f0f3f4;
     font-weight: 700;
     
-}
+} 
+.bootbox-alert div div {
+    background-color: #f0f3f4;
+    font-weight: 700;
+} 
+
+#spinner { display:none; } 
+form.busy .spinner { display:block !important; }
