--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,10 @@
     
 }
 
+.bgtest{
+    background-color: rgba(29, 78, 216, 0.15);
+}
+
 .bg2{
     background-color: #f5f5f5;
 }
@@ -92,4 +96,15 @@
 .bootbox-alert div div {
     background-color: #f0f3f4;
     font-weight: 700;   
-} 
+}
+
+.hdr-text-style{
+    font-size: 16px;
+    text-align: center;
+    letter-spacing: 0.2em;
+}
+
+.carousel-img{
+    max-height:30px;
+    max-width:30px;
+}
